--- a/appfront/index.html
+++ b/appfront/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>appfront</title>
+    <title>ok</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
   </body>
 </html>
